# udcs-in-llm-agents

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
docs/env_setup/: ALFWORLD_SETUP.md  WEBSHOP_SETUP.md
scripts/verification/: README.md  run_parallel.sh
scripts/verification/alfworld/proposed_v4/: proposed_v4.py
scripts/verification/alfworld/react/: react.py
scripts/verification/alfworld/uam/: uam.py
scripts/verification/alfworld_clarification/proposed_v4/: proposed_v4.py
scripts/verification/alfworld_clarification/react/: react.py
scripts/verification/alfworld_clarification/uam/: uam.py
scripts/verification/real/: reaggregate_runs.py
scripts/verification/real/proposed_v4/: hackable.py  proposed_v4.py
scripts/verification/real/react/: hackable.py  react.py
scripts/verification/real/uam/: hackable.py  uam.py
scripts/verification/webshop/proposed_v4/: proposed_v4.py
scripts/verification/webshop/react/: react.py
scripts/verification/webshop/uam/: uam.py
scripts/verification/webshop_clarification/proposed_v4/: proposed_v4.py
scripts/verification/webshop_clarification/react/: react.py
scripts/verification/webshop_clarification/uam/: uam.py
