[project]
name = "uncertainty-aware-web-agents"
version = "0.1.0"
description = "Uncertainty-aware web-agent in the wild"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agisdk",
    "alfworld>=0.4.2",
]

[dependency-groups]
analysis = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
scripts = [
    # WebShop requirements (>=min version to avoid workspace conflicts)
    "beautifulsoup4>=4.11.1",
    "cleantext>=1.1.4",
    "flask>=2.1.2",
    "gdown",
    "gym==0.24.0",
    "pandas>=1.4.2",
    "pyserini>=0.17.0",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "requests>=2.27.1",
    "rich>=12.4.4",
    "spacy>=3.3.0",
    "thefuzz>=0.19.0",
    "torch>=1.11.0",
    "tqdm>=4.64.0",
    "transformers>=4.19.2",
    # Verification scripts
    "optuna>=3.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
]

[tool.uv.workspace]
members = [
    "benchmarks/agisdk",
]

[tool.uv.sources]
agisdk = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
include = ["scripts/**/*.py", "guawa/**/*.py"]
exclude = ["benchmarks/agisdk"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in __init__
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "B008",    # Do not perform function call in argument defaults (FastAPI Depends pattern)
    "ARG001",  # Unused function argument (FastAPI dependency injection pattern)
    "PLR0913", # Too many arguments (FastAPI endpoints with many query params)
    "PLR0912", # Too many branches (complex filtering logic)
    "PLR0915", # Too many statements (complex service functions)
    "TRY301",  # Abstract raise to inner function (not applicable for API errors)
    "RUF012",  # Mutable class attributes (Pydantic models)
]

[tool.ruff.lint.pydocstyle]
convention = "google"
